feat: add tickets api
